# college_event_score_system

./: CHANGELOG.md  README.md  main.py  requirements.txt  setup.cfg  test.py
.github/: FUNDING.yml
config/: config.py
data/: data_handler.py  database.db  multiple_data_handler.py  solo_data_handler.py
gui/: event_directory.py  main_gui.py  main_window.py  score_board.py  score_display.py  score_entry.py
models/: event.py  participant.py
output/College Event Score System/_internal/wheel-0.43.0.dist-info/: RECORD
output/College Event Score System/config/: config.py
output/College Event Score System/data/: database.db  multiple_data_handler.py
output/College Event Score System/gui/: event_directory.py  main_gui.py  score_entry.py
output/College Event Score System/services/: event_manager.py  participant_manager.py  score_calculator.py
output/College Event Score System/themes/: atts_main.json
output/College Event Score System/utils/: image_loader.py
services/: event_manager.py  participant_manager.py  score_calculator.py
utils/: custom_font.py  customisation.py  font_loader.py
