[metadata]
name = College Event Score System
version = 0.1.0
description = A College Event Score System For My Level 3 National Foundation Diploma In Information Technology
long_description = A Basic Score System For College Events As Part Of My Level 3 National Foundation Diploma In Information Technology
long_description_content_type = text/markdown
url = https://austinatts.co.uk
author = Austin Welsh-Graham
license = MIT License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only

[project.urls]
homepage = https://austinatts.co.uk
repository = https://github.com/AustinATTS/college_event_score_system

[options]
python_requires = >=3.7
install_requires =
    customtkinter
    darkdetect
    pyglet
include_package_data = True
